// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expensesSummary correct with 1 expense 1`] = `
<div>
  <h3>
    Expenses Total
  </h3>
  <p>
    Viewing 
    1
     
    expense
     totalling
     
    $72
  </p>
</div>
`;

exports[`should render expensesSummary correct with 2 expenses 1`] = `
<div>
  <h3>
    Expenses Total
  </h3>
  <p>
    Viewing 
    2
     
    expenses
     totalling
     
    $102
  </p>
</div>
`;
